# build-windows-flet-workflow

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: windows-build.yml
src/: main.py
